chrore: Add "Absolute path" description to README and package.json

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "php-cs-fixer.toolPath": {
           "type": "string",
           "default": "",
-          "description": "The path to the php-cs-fixer tool"
+          "description": "The path to the php-cs-fixer tool (Absolute path)"
         },
         "php-cs-fixer.useCache": {
           "type": "boolean",
