--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coc-php-cs-fixer",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "PHP CS Fixer (PHP Coding Standards Fixer) extension for coc.nvim",
   "author": "yaegassy <yosstools@gmail.com>",
   "license": "MIT",
@@ -42,12 +42,12 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.2.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.2",
     "https-proxy-agent": "^5.0.0",
     "node-fetch": "^2.6.0",
-    "tmp": "^0.1.0"
+    "prettier": "^2.2.0",
+    "rimraf": "^3.0.2",
+    "tmp": "^0.1.0",
+    "typescript": "^4.1.2"
   },
   "activationEvents": [
     "onLanguage:php"
