feat: add `php-cs-fixer.showOutput` command

--- a/package.json
+++ b/package.json
@@ -131,6 +131,10 @@
       {
         "command": "php-cs-fixer.download",
         "title": "Download php-cs-fixer"
+      },
+      {
+        "command": "php-cs-fixer.showOutput",
+        "title": "Show php-cs-fixer output channel"
       }
     ]
   }
