--- a/package.json
+++ b/package.json
@@ -165,6 +165,11 @@
           "type": "boolean",
           "default": true,
           "description": "Enable codeAction provider"
+        },
+        "php-cs-fixer.terminal.enableSplitRight": {
+          "type": "boolean",
+          "default": false,
+          "description": "Use vertical belowright for dryRunDiff and pintTest terminal window"
         }
       }
     },
