--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
     "tmp": "^0.2.1",
-    "typescript": "^4.9.3"
+    "typescript": "~5.0.4"
   },
   "activationEvents": [
     "onLanguage:php"
