chore(ci): temporarily disable cron for schema-check actions

--- a/.github/workflows/upstream-schema-check.yml
+++ b/.github/workflows/upstream-schema-check.yml
@@ -1,8 +1,8 @@
 name: upstream-schema-check
 
 on: 
-  schedule:
-    - cron: "0 15 * * *"
+  #schedule:
+  #  - cron: "0 15 * * *"
   workflow_dispatch:
 
 jobs:
