chore: add packageManager

--- a/package.json
+++ b/package.json
@@ -203,5 +203,6 @@
         "title": "Show php-cs-fixer output channel"
       }
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
